style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    font-family: 'Gabarito',sans-serif;
}
.navbar{
      padding: 10px;
    display: flex;
    justify-content: space-between;
    border-bottom: solid black 1px;
    gap:10px;
    align-items: center;
    flex-wrap: wrap;
    position: sticky;
    top:0;
    background-color: white;
    z-index: 1;
}
.navbar__s1__title{
    color: #a435f0;
}
.navbar__s2{
    padding: 10px;
    border: solid black 1px;
    border-radius: 30px;
    width: 60%;
    display: flex;
    gap: 10px;
    align-items: center;
    
}
.navbar__s2 input{
    border: none;
    font-size: 16px;
    width: 100%;
    background-color: transparent;
}
.navbar__s2 input:focus{
    outline: none;
}
.navbar__s3{
    display: flex;
    gap:10px;
    align-items: center;
}
.navbar__s4{
    display: none;
}
.mylearning{
    position: relative;
    cursor: pointer;
}
.mylearning__popup{
    position: absolute;
    background-color: white;
    border: solid black 1px;
    width: 200px;
    top: 150%;
    padding: 20px;
    right: 0;
    display: none;
}
.mylearning:hover .mylearning__popup{
    display: block;

}
.categories{
    display: flex;
    padding: 10px;

    border-bottom: solid black 1px;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 10px;
    margin-top: 10px;
}
.categories p{
    background-color: #a435f0;
    color: white;
    padding: 10px;
    cursor: pointer;
    border-radius: 30px;
    border: solid #a435f0 1px; /*for remove shake effect in webpage*/
}
.categories p:hover{
    transition: 1s;
    background-color: transparent;
    color: black;
    border: solid #a435f0 1px;https://github.com/ishu122004/Udemy-clone.git
}

.sale-image img{
    width:100%;
    height: 50%;

}
.sale-image{
    position: relative;
}
.sale-image__offer{
    position: absolute;
    top:10%;
    background-color: white;
    width: 35%;
    left: 10%;
    padding: 2%;
    border: solid black 2px;
    animation-name: zoom;
    animation-duration: 2s;
    opacity: 0;
    animation-fill-mode: forwards; 
    /* <!-- animation will be shows like before animation final state.nothingb but shows 100% animation permanently  --> */
}
@keyframes zoom{
    0%{
        transform: scale(0);
        opacity: 0;
    }
    100%{
        opacity: 1;
        transform: scale(1);
    }
}
.recommended{
    padding: 10px;
}
.recommended__container{
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
    
    flex-wrap: wrap;

}
.course-card{
    flex-grow: 1;
    flex-basis: 20%;
    margin: 10px;
}
    

.course-card img{
    width: 100%;
    height: 200px;
}
.topics{
    padding: 10px;
}
.topics__container{
    display: flex;
    gap: 10px;
    margin-top: 10px;
    flex-wrap: wrap;
    
}
.topics__container p{
    border: solid gray 2px;
    padding: 10px;
    flex-grow: 1;
    flex-basis: 25%;
}
.popular{
    padding: 10px;
}
.popular__container{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 10px;
}
.footer{
    padding: 30px;
    background-color: black;
    color: white;
}
.footer__one{
    display: flex;
    gap: 10px;
}
.footer__one p{
    margin: 20px;
}

.footer__two{
    margin: 20px;
    display: flex;
    align-items: center;
    
    justify-content: space-between;
}
/*Media Queries*/
@media  and (max-width:800px) {
    body{
        font-size: 10px;
        
    }
}
@media screen and (max-width:600px) {
    .course-card{
        flex-basis: 40%;
    }
    .course-card img{
        height: 120px;
        
        object-fit: cover;
    }
    .categories{
        display: none;
    }
    .navbar__s2,.navbar__s3{
        display: none;
    }
    .navbar__s4{
        display: block;
    }
    .sale-image{
        position: relative;
        width: 100%;
        
    }
    
     .sale-image__offer{
        width:40%;
        position: absolute;
        padding: 5px;
        font-size: 10px;
        left:10px;
        margin-bottom: 100px; 
        
    }
    
    
}

